--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,9 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "fastmcp>=2.14.3",
-    "langchain>=1.2.6",
-    "langchain-core>=1.2.7",
-    "langchain-google-genai>=4.2.0",
+    "langchain==1.2.2",
+    "langchain-core==1.2.6",
+    "langchain-google-genai==4.1.3",
     "langchain-mcp-adapters>=0.2.1",
-    "python-dotenv>=1.2.1",
+    "python-dotenv==1.2.1",
 ]
